환경 변수 보안 설정 완료 -m credential 파일 재 설정 및 env.example 설정 완료

--- a/backend_new/.gitignore
+++ b/backend_new/.gitignore
@@ -49,5 +49,16 @@ cover/
 .ipynb_checkpoints
 
 # Environment variables
+.env
 .env.local
 .env.*.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Credentials
+app/credentials/*.json
+*.pem
+*.key
+credentials.json
+service-account.json
