--- a/backend_new/.env.example
+++ b/backend_new/.env.example
@@ -1,22 +1,52 @@
-# Database Configuration
-DATABASE_URL=postgresql://user:password@localhost:5432/intellio_db
+# API Settings
+API_V1_STR=/api/v1
+PROJECT_NAME=Intellio
+BACKEND_CORS_ORIGINS=["http://localhost:3000"]
 
-# JWT Configuration
-SECRET_KEY=your_secret_key_here
+# Security
+SECRET_KEY=your-secret-key-here
 ALGORITHM=HS256
 ACCESS_TOKEN_EXPIRE_MINUTES=30
 
-# API Configuration
-API_V1_STR=/api/v1
-
-# OpenAI Configuration
-OPENAI_API_KEY=your_openai_api_key_here
-
-# File Storage Configuration
+# Document Processing
 UPLOAD_DIR=./uploads
-MAX_FILE_SIZE=10485760  # 10MB in bytes
+CACHE_DIR=./cache
 
-# Server Configuration
-HOST=0.0.0.0
-PORT=8000
-DEBUG=True
+# Database
+POSTGRES_USER=your_db_username
+POSTGRES_PASSWORD=your_db_password
+POSTGRES_DB=your_db_name
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
+
+# OpenAI
+OPENAI_API_KEY=your_openai_api_key
+
+# Redis
+REDIS_URL=redis://localhost:6379
+
+# pgAdmin
+PGADMIN_EMAIL=your_email@example.com
+PGADMIN_PASSWORD=your_pgadmin_password
+
+# Google Cloud
+GOOGLE_CLOUD_PROJECT=your_project_id
+GOOGLE_APPLICATION_CREDENTIALS=path/to/your/credentials.json
+GOOGLE_DOCUMENT_AI_PROCESSOR_ID=your_processor_id
+GOOGLE_CLOUD_LOCATION=us
+GOOGLE_CLOUD_STORAGE_BUCKET=your_storage_bucket
+GCS_BUCKET_NAME=your_bucket_name
+
+# Pinecone
+PINECONE_API_KEY=your_pinecone_api_key
+PINECONE_ENVIRONMENT=your_pinecone_environment
+PINECONE_INDEX_NAME=your_index_name
+
+# Test Settings
+ADMIN_TEST_USER_ID=admin_test
+ADMIN_TEST_API_KEY=test_key_123
+ALLOW_ANONYMOUS=true
+
+# JWT
+JWT_SECRET=your_jwt_secret_key_here
