--- a/backend_new/requirements.txt
+++ b/backend_new/requirements.txt
@@ -12,6 +12,8 @@ python-dotenv==1.0.0
 pytest==7.4.2
 pytest-asyncio==0.21.1
 httpx==0.26.0
+psycopg2==2.9.10
+tika==2.6.0
 
 # OpenAI
 openai==1.6.1
@@ -28,6 +30,7 @@ google-cloud-documentai==2.20.1
 google-cloud-storage==2.13.0
 
 # Vector Database
+pinecone==5.4.2
 pinecone-client==2.2.4
 
 # Utils
