--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
-    "typescript": "^5.7.2"
+    "typescript": "^5.7.2",
+    "@radix-ui/react-label": "^2.1.1"
   }
 }
