개발환경설정 관련파일 수정

--- a/backend_new/requirements.txt
+++ b/backend_new/requirements.txt
@@ -5,7 +5,7 @@ alembic==1.13.1
 python-multipart==0.0.6
 python-jose==3.3.0
 passlib==1.7.4
-pydantic==2.5.3
+pydantic[email]==2.10.4
 pydantic-settings==2.1.0
 asyncpg==0.29.0
 python-dotenv==1.0.0
