--- a/backend_new/.env.example
+++ b/backend_new/.env.example
@@ -50,3 +50,12 @@ ALLOW_ANONYMOUS=true
 
 # JWT
 JWT_SECRET=your_jwt_secret_key_here
+
+# OAuth Settings
+NAVER_CLIENT_ID=your_naver_client_id
+NAVER_CLIENT_SECRET=your_naver_client_secret
+NAVER_REDIRECT_URI=http://localhost:3000/auth/callback
+
+# AI Models
+OPENAI_API_KEY=your_openai_api_key
+GEMINI_API_KEY=your_gemini_api_key
