--- a/backend_new/.env.example
+++ b/backend_new/.env.example
@@ -17,11 +17,12 @@ POSTGRES_USER=your_db_username
 POSTGRES_PASSWORD=your_db_password
 POSTGRES_DB=your_db_name
 POSTGRES_HOST=localhost
-POSTGRES_PORT=5432
+POSTGRES_PORT=5433
 DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
-# OpenAI
+# AI Services
 OPENAI_API_KEY=your_openai_api_key
+GEMINI_API_KEY=your_gemini_api_key  # Gemini Pro API - https://makersuite.google.com/app/apikey
 
 # Redis
 REDIS_URL=redis://localhost:6379
