1. OAuth ID와 프로젝트 연결  - 기존 : 프로젝트가 임시 세션과 연결되어서 관리  - 변경 : 프로젝트가 OAuth 인증 후 만들어진 세션과 연결되어 관리 2. DB 마이그레이션 3. .env 파일 인코딩 자동감지

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,7 +11,8 @@ services:
       POSTGRES_MAX_CONNECTIONS: "100"
       PGDATA: /var/lib/postgresql/data/pgdata
       # 한글 인코딩 설정
-      LANG: ko_KR.utf8
+      LANG: C.UTF-8
+      LC_ALL: C.UTF-8
       # 타임존 설정
       TZ: Asia/Seoul
       # 로깅 설정
