feat: 멀티프롬프트완료
- PromptManager에 _process_table 메서드 추가
- 테이블 헤더/내용 처리 로직 구현
- Gemini API 연동 및 응답 포맷팅

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,10 +26,13 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/typography": "^0.5.15",
+    "@types/echarts": "^4.9.22",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "echarts": "^5.6.0",
+    "echarts-for-react": "^3.0.2",
     "lucide-react": "^0.460.0",
     "next": "14.2.16",
     "next-themes": "^0.4.4",
