--- a/backend_new/.env.example
+++ b/backend_new/.env.example
@@ -23,6 +23,8 @@ DATABASE_URL=postgresql+psycopg2://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTG
 # AI Services
 OPENAI_API_KEY=your_openai_api_key
 GEMINI_API_KEY=your_gemini_api_key  # Gemini Pro API - https://makersuite.google.com/app/apikey
+GEMINI_PROJECT=intellio
+GEMINI_LOCATION=us-central1
 
 # Redis
 REDIS_URL=redis://localhost:6379
