--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
     "@emotion/react": "^11.13.5",
     "@emotion/styled": "^11.13.5",
     "@hello-pangea/dnd": "^17.0.0",
+    "@heroicons/react": "^2.2.0",
     "@mui/material": "^6.1.10",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.3",
@@ -21,6 +22,7 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-popover": "^1.1.4",
     "@radix-ui/react-popper": "^1.2.1",
+    "@radix-ui/react-scroll-area": "^1.2.2",
     "@radix-ui/react-select": "^2.1.4",
     "@radix-ui/react-slot": "^1.1.1",
     "@radix-ui/react-tooltip": "^1.1.6",
@@ -39,6 +41,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.3.5",
+    "react-emoji-render": "^2.0.1",
     "react-markdown": "^9.0.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
