--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,11 +9,14 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@emotion/react": "^11.13.5",
-    "@emotion/styled": "^11.13.5",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
     "@hello-pangea/dnd": "^17.0.0",
     "@heroicons/react": "^2.2.0",
-    "@mui/material": "^6.1.10",
+    "@mui/icons-material": "^6.3.1",
+    "@mui/material": "^6.3.1",
+    "@mui/system": "^6.3.1",
+    "@mui/x-date-pickers": "^7.23.3",
     "@radix-ui/react-avatar": "^1.1.1",
     "@radix-ui/react-checkbox": "^1.1.3",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -28,6 +31,7 @@
     "@radix-ui/react-tooltip": "^1.1.6",
     "@shadcn/ui": "^0.0.4",
     "@tailwindcss/typography": "^0.5.15",
+    "@tanstack/react-table": "^8.20.6",
     "@types/echarts": "^4.9.22",
     "axios": "^1.7.8",
     "class-variance-authority": "^0.7.0",
@@ -36,13 +40,15 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "lucide-react": "^0.460.0",
-    "next": "14.2.16",
+    "material-react-table": "^3.1.0",
+    "next": "^15.1.4",
     "next-themes": "^0.4.4",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-dropzone": "^14.3.5",
     "react-emoji-render": "^2.0.1",
     "react-markdown": "^9.0.1",
+    "react-window": "^1.8.11",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
@@ -54,7 +60,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
-    "eslint-config-next": "14.2.16",
+    "eslint-config-next": "^15.1.4",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "ts-node": "^10.9.2",
