--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -41,6 +41,15 @@ services:
     restart: unless-stopped
     networks:
       - app-network
+  pgadmin:
+    image: dpage/pgadmin4
+    environment:
+      PGADMIN_DEFAULT_EMAIL: intellio@intellio.com
+      PGADMIN_DEFAULT_PASSWORD: qwe123
+    ports:
+      - "5050:80"
+    networks:
+      - app-network
 
   redis:
     image: redis:latest
