--- a/frontend/package.json
+++ b/frontend/package.json
@@ -39,8 +39,10 @@
     "date-fns": "^4.1.0",
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
+    "html-react-parser": "^5.2.2",
     "lucide-react": "^0.460.0",
     "material-react-table": "^3.1.0",
+    "mermaid": "^11.4.1",
     "next": "^15.1.4",
     "next-themes": "^0.4.4",
     "react": "^18.3.1",
@@ -48,6 +50,7 @@
     "react-dropzone": "^14.3.5",
     "react-emoji-render": "^2.0.1",
     "react-markdown": "^9.0.1",
+    "react-mermaid": "^0.1.3",
     "react-window": "^1.8.11",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
