--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "react-markdown": "^9.0.1",
     "react-mermaid": "^0.1.3",
     "react-window": "^1.8.11",
+    "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.5.5",
