--- a/frontend/doceasy/package.json
+++ b/frontend/doceasy/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3010",
-    "build": "next build",
-    "start": "next start",
+    "build": "next build --no-lint",
+    "start": "next start -p 3010",
     "lint": "next lint"
   },
   "dependencies": {
