--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -4,11 +4,13 @@ services:
   postgres:
     image: postgres:15
     command: postgres -c timezone=Asia/Seoul
+    env_file:
+      - .env
     environment:
-      POSTGRES_DB: ${POSTGRES_DB}
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_MAX_CONNECTIONS: ${POSTGRES_MAX_CONNECTIONS:-100}
+      # POSTGRES_DB: ${POSTGRES_DB}
+      # POSTGRES_USER: ${POSTGRES_USER}
+      # POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      # POSTGRES_MAX_CONNECTIONS: ${POSTGRES_MAX_CONNECTIONS:-100}
       PGDATA: /var/lib/postgresql/data/pgdata
       LANG: C.UTF-8
       LC_ALL: C.UTF-8
@@ -55,12 +57,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.fastapi
-    volumes:
-      - ./backend:/backend # 개발 환경에서만 사용\
     ports:
       - "8000:8000"
-    env_file:
-      - .env
     depends_on:
       - postgres
       - redis
@@ -71,8 +69,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.celery.doceasy
-    env_file:
-      - .env
     depends_on:
       - redis
       - postgres
@@ -83,8 +79,6 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.celery.stockeasy
-    env_file:
-      - .env
     depends_on:
       - redis
       - postgres
@@ -103,32 +97,6 @@ services:
       - celery-stockeasy
     networks:
       - app-network
-
-  # frontend-doceasy:
-  #   build:
-  #     context: .
-  #     dockerfile: Dockerfile.frontend.doceasy
-  #   ports:
-  #     - "3010:3010"
-  #   env_file:
-  #     - frontend/doceasy/.env.production
-  #   depends_on:
-  #     - fastapi
-  #   networks:
-  #     - app-network
-
-  # nginx:
-  #   image: nginx:latest
-  #   depends_on:
-  #     #- frontend-doceasy
-  #     - fastapi
-  #   networks:
-  #     - app-network
-  #   extra_hosts:
-  #     - "host.docker.internal:host-gateway"
-  #   volumes:
-  #     - ./nginx/intellio.prod.conf:/etc/nginx/conf.d/default.conf
-  #     - /etc/letsencrypt:/etc/letsencrypt
 
 networks:
   app-network:
