--- a/nginx/intellio.dev.conf
+++ b/nginx/intellio.dev.conf
@@ -1,34 +1,68 @@
+upstream fastapi {
+    server fastapi:8000;
+}
+
+upstream frontend_doceasy {
+    server frontend-doceasy:3010;
+}
+
 server {
     listen 80;
     server_name localhost;
 
-    # Next.js 정적 파일
-    location ~ ^/_next/static/(.*) {
-        root /home/intellio_korea/intellio_prod/frontend/main/.next;
-        try_files /static/$1 =404;
-        expires 365d;
-        access_log off;
+    # FastAPI
+    location /api/ {
+        proxy_pass http://fastapi;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # DocEasy Frontend
+    location /doceasy/ {
+        proxy_pass http://frontend_doceasy;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+
+    # WebSocket support
+    location /ws/ {
+        proxy_pass http://fastapi;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection "upgrade";
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+    }
+
+    # Static files
+    location /static/ {
+        alias /app/static/;
+        expires 30d;
         add_header Cache-Control "public, no-transform";
     }
 
-    # Main 페이지 (port 3000)
-    location / {
-        proxy_pass http://host.docker.internal:3000;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+    # Media files
+    location /media/ {
+        alias /app/media/;
+        expires 30d;
+        add_header Cache-Control "public, no-transform";
     }
 
-    # FastAPI 백엔드 API
-    location /api/ {
-        proxy_pass http://host.docker.internal:8000/;
-        proxy_http_version 1.1;
-        proxy_set_header Upgrade $http_upgrade;
-        proxy_set_header Connection 'upgrade';
-        proxy_set_header Host $host;
-        proxy_cache_bypass $http_upgrade;
+    # Health check
+    location /health {
+        access_log off;
+        return 200 "healthy\n";
+    }
+
+    # Error pages
+    error_page 404 /404.html;
+    error_page 500 502 503 504 /50x.html;
+    location = /50x.html {
+        root /usr/share/nginx/html;
     }
 }
 
