볼륨 이동 후 환경 일부 수정

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -7,14 +7,20 @@ services:
       #- backend/.env.production
     environment:
       - ENV=production
+    volumes:
+      - ./backend:/backend
 
   celery-doceasy:
     env_file:
       - .env.production
       #- backend/.env.production
+    volumes:
+      - ./backend:/backend
 
   celery-stockeasy:
     env_file:
       - .env.production
       #- backend/.env.production
+    volumes:
+      - ./backend:/backend
 
