--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -45,10 +45,12 @@ services:
     image: apache/tika:latest
     ports:
       - "9998:9998"
+    environment:
+      - JAVA_OPTS=-Xmx1g
     networks:
       - app-network
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:9998/tika"]
+      test: ["CMD", "wget", "--spider", "http://localhost:9998/tika"]
       interval: 10s
       timeout: 5s
       retries: 3
@@ -59,6 +61,7 @@ services:
       dockerfile: Dockerfile.fastapi
     ports:
       - "8000:8000"
+
     depends_on:
       - postgres
       - redis
