refactor(backend): 문서 처리 및 검색 로직 개선
- 문서 청크 처리 로직 리팩토링
  * DocumentChunk 모델 구조 변경
  * 텍스트 분할 전략 최적화 (한국어 특화 분리자 추가)
- 하이브리드 검색 전략 구현
  * Contextual BM25 검색 통합
  * 검색 결과 병합 및 점수 가중치 조정
- 임베딩 및 검색 오류 처리 개선
  * Google API 리전 변경 로직 추가
  * 검색 실패 시 대체 메커니즘 구현
- 도커 및 스크립트 환경 최적화
  * Celery 및 FastAPI 시작 스크립트 수정
  * 개발/운영 환경 분기 처리

--- a/Dockerfile.celery.doceasy
+++ b/Dockerfile.celery.doceasy
@@ -19,4 +19,8 @@ COPY backend/ .
 # 환경변수 설정
 ENV PYTHONPATH=/backend
 
-CMD ["celery", "-A", "doceasy.core.celery_app", "worker", "-n", "doceasy@%h", "--loglevel=INFO", "-Q", "document-processing,main-queue,rag-processing", "--pool=threads", "--concurrency=1", "--events"] 
+
+# Add entrypoint script
+RUN chmod +x ./start-celery-doceasy.sh
+
+CMD ["./start-celery-doceasy.sh"] 
