--- a/Dockerfile.fastapi
+++ b/Dockerfile.fastapi
@@ -22,7 +22,12 @@ COPY backend/requirements.txt .
 # Install Python dependencies
 RUN pip install --no-cache-dir --upgrade pip && \
     pip install --no-cache-dir wheel setuptools && \
-    pip install --no-cache-dir -r requirements.txt
+    if [ "$ENV" = "development" ] ; then \
+        echo "Installing with cache for development" && \
+        pip install -r requirements.txt ; \
+    else \
+        echo "Installing without cache for production" && \
+        pip install --no-cache-dir -r requirements.txt ; \
 
 # Copy backend code
 COPY backend/ .
