feat(docker, celery): Configure Flower environment variables for Redis
- Add explicit CELERY_BROKER_URL and CELERY_RESULT_BACKEND environment variables for Flower service
- Set Redis connection URL to redis://redis:6379/0 in docker-compose files
- Update Celery worker start script to use dynamic concurrency with fallback to 1

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -131,6 +131,9 @@ services:
     image: mher/flower
     env_file:
       - .env
+    environment:
+      - CELERY_BROKER_URL=redis://redis:6379/0
+      - CELERY_RESULT_BACKEND=redis://redis:6379/0
     ports:
       - "5555:5555"
     depends_on:
