--- a/.dockerignore
+++ b/.dockerignore
@@ -7,6 +7,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
+*.pyc
 
 # Celery
 celerybeat*
@@ -28,7 +29,38 @@ venv/
 
 # Logs
 /logs
-*.log 
+*.log
 
-# telegram
+# Data and Media
 telegram_files/
+*.pdf
+*.doc
+*.docx
+*.xls
+*.xlsx
+*.zip
+*.tar
+*.gz
+
+# Node modules
+node_modules/
+
+# Test files
+tests/
+test_data/
+
+# Documentation
+docs/
+*.md
+
+# Docker
+.docker/
+
+# Temporary files
+tmp/
+temp/
+*.tmp
+
+# Database
+*.sqlite3
+*.db
