feat(docker): Docker 이미지 크기 축소 개선
- 개발/프로덕션 환경에 대한 다단계 Dockerfile 추가
- 베이스 이미지 분리 및 최적화 (개발/프로덕션용)
- Docker Compose 파일 구조 리팩터링
- 개발 및 운영 환경을 위한 빌드/실행 스크립트 추가
- 의존성 및 시스템 패키지 설치 최적화
- 볼륨 마운트 및 환경변수 설정 개선

--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -1,4 +1,3 @@
-
 services:
   postgres:
     image: postgres:15
@@ -51,32 +50,26 @@ services:
       retries: 3
 
   fastapi:
-    build:
-      context: .
-      dockerfile: Dockerfile.fastapi
     ports:
       - "8000:8000"
-
     depends_on:
       - postgres
       - redis
+      - tika
+    restart: unless-stopped
     networks:
       - app-network
 
+
   celery-doceasy:
-    build:
-      context: .
-      dockerfile: Dockerfile.celery.doceasy
     depends_on:
       - redis
       - postgres
+    restart: unless-stopped
     networks:
       - app-network
 
   celery-stockeasy:
-    build:
-      context: .
-      dockerfile: Dockerfile.celery.stockeasy
     depends_on:
       - redis
       - postgres
