--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,4 +1,3 @@
-version: '3.8'
 
 services:
   postgres:
@@ -19,6 +18,8 @@ services:
       - .env.production
     environment:
       - ENV=production
+    volumes:
+      - ./backend:/backend
     
 
   celery-doceasy:
@@ -27,6 +28,10 @@ services:
       dockerfile: Dockerfile.celery.doceasy.prod
     env_file:
       - .env.production
+    environment:
+      - ENV=production
+    volumes:
+      - ./backend:/backend
 
   celery-stockeasy:
     build:
@@ -34,4 +39,8 @@ services:
       dockerfile: Dockerfile.celery.stockeasy.prod
     env_file:
       - .env.production
+    environment:
+      - ENV=production
+    volumes:
+      - ./backend:/backend
 
