--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "@tailwindcss/typography": "^0.5.15",
     "@tanstack/react-table": "^8.20.6",
     "@types/echarts": "^4.9.22",
-    "axios": "^1.7.8",
+    "@types/papaparse": "^5.3.15",
+    "axios": "^1.8.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "common-ui": "file:frontend/common",
@@ -51,17 +52,20 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "html-react-parser": "^5.2.2",
+    "lightweight-charts": "^5.0.3",
     "lucide-react": "^0.460.0",
     "material-react-table": "^3.1.0",
     "mermaid": "^11.4.1",
     "next": "^15.1.4",
     "next-themes": "^0.4.4",
+    "papaparse": "^5.5.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-emoji-render": "^2.0.1",
     "react-markdown": "^9.0.1",
     "react-mermaid": "^0.1.3",
+    "react-select": "^5.10.1",
     "react-toastify": "^11.0.3",
     "react-window": "^1.8.11",
     "remark-breaks": "^4.0.0",
