feat(backend): RAG 평가 및 임베딩 메트릭 시스템 구현
- 평가 프레임워크 추가: evaluation 디렉토리 생성
- LangSmith 기반 RAG 평가 모듈 개발
- 임베딩 및 검색 메트릭 계산 기능 구현
- 데이터셋 생성기 및 쿼리 변형 생성기 추가
- 테스트 파일 정리 및 불필요한 테스트 제거
- 로깅 및 오류 처리 개선

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -76,3 +76,8 @@ stockeasy/telegram_channels.json
 celerybeat-schedule
 celerybeat-schedule.*
 celerybeat.pid
+
+# evaluation
+evaluation/datasets
+evaluation/results
+
