--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "react-dropzone": "^14.3.5",
     "react-emoji-render": "^2.0.1",
     "react-markdown": "^9.0.1",
+    "react-mentions": "^4.4.10",
     "react-mermaid": "^0.1.3",
     "react-select": "^5.10.1",
     "react-toastify": "^11.0.3",
