--- a/frontend/main/package.json
+++ b/frontend/main/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3000",
-    "build": "next build",
+    "build": "cross-env NODE_OPTIONS=--max_old_space_size=8192 next build",
     "start": "next start"
   },
   "dependencies": {
@@ -62,6 +62,7 @@
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
+    "cross-env": "^7.0.3",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
