--- a/frontend/stockeasy/package.json
+++ b/frontend/stockeasy/package.json
@@ -4,23 +4,22 @@
   "private": true,
   "scripts": {
     "dev": "next dev -p 3020",
-    "build": "next build",
+    "build": "cross-env NODE_OPTIONS=--max_old_space_size=8192 next build",
     "start": "next start -p 3020"
   },
   "dependencies": {
     "@radix-ui/react-slot": "^1.0.2",
     "@shadcn/ui": "^0.0.4",
-    "class-variance-authority": "^0.7.0",
-    "clsx": "^2.1.0",
-    "next": "latest",
-    "react": "latest",
-    "react-dom": "latest",
-    "tailwind-merge": "^2.2.1",
     "@tailwindcss/typography": "^0.5.15",
     "axios": "^1.7.8",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
     "lucide-react": "^0.460.0",
+    "next": "latest",
     "next-themes": "^0.4.4",
+    "react": "latest",
+    "react-dom": "latest",
     "react-dropzone": "^14.3.5",
     "react-emoji-render": "^2.0.1",
     "react-markdown": "^9.0.1",
@@ -29,6 +28,7 @@
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.7.0",
+    "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "ui": "github:shadcn/ui",
     "zustand": "^5.0.2"
@@ -38,6 +38,7 @@
     "@types/react": "^18.2.52",
     "@types/react-dom": "^18.2.18",
     "autoprefixer": "^10.4.17",
+    "cross-env": "^7.0.3",
     "postcss": "^8.4.33",
     "tailwindcss": "^3.4.1",
     "typescript": "^5.3.3"
