telegram_channel.json 볼륨 마운트

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -8,6 +8,8 @@ services:
       context: .
       dockerfile: Dockerfile.base.prod
     image: intellio-base-prod:latest
+    volumes:
+      - ./backend/stockeasy/telegram_channels.json:/app/backend/stockeasy/telegram_channels.json
     profiles: ["build"]
 
   fastapi:
