hotfix : DB저장 시 null byte 처리

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -9,7 +9,8 @@ services:
       dockerfile: Dockerfile.base.prod
     image: intellio-base-prod:latest
     volumes:
-      - ./backend/stockeasy/telegram_channels.json:/app/backend/stockeasy/telegram_channels.json
+      - ./backend:/backend
+      #- ./backend/stockeasy/telegram_channels.json:/app/backend/stockeasy/telegram_channels.json
     profiles: ["build"]
 
   fastapi:
