--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-mentions": "^4.4.10",
     "react-mermaid": "^0.1.3",
     "react-select": "^5.10.1",
+    "react-sparklines": "^1.7.0",
     "react-toastify": "^11.0.3",
     "react-window": "^1.8.11",
     "remark-breaks": "^4.0.0",
@@ -82,6 +83,7 @@
     "@types/node": "^20.17.8",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@types/react-sparklines": "^1.7.5",
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "^15.1.4",
