--- a/backend/common/services/llm_config/agent_llm_config.json
+++ b/backend/common/services/llm_config/agent_llm_config.json
@@ -12,21 +12,21 @@
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
       "temperature": 0,
-      "max_tokens": 2048,
+      "max_tokens": 4096,
       "api_key_env": "GEMINI_API_KEY"
     },
 	"orchestrator_agent": {
-      "provider": "openai",
-      "model_name": "gpt-4o",
+      "provider": "gemini",
+      "model_name": "models/gemini-2.0-flash",
       "temperature": 0,
-      "max_tokens": 2048,
-      "api_key_env": "OPENAI_API_KEY"
+      "max_tokens": 4096,
+      "api_key_env": "GEMINI_API_KEY"
     },
     "report_analyzer_agent": {
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
       "temperature": 0,
-      "max_tokens": 2048,
+      "max_tokens": 4096,
       "api_key_env": "GEMINI_API_KEY"
     },
     "knowledge_integrator_agent": {
@@ -53,30 +53,30 @@
     "summarizer_agent": {
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
-      "temperature": 0.2,
-      "max_tokens": 1024,
+      "temperature": 0.3,
+      "max_tokens": 4096,
       "api_key_env": "GEMINI_API_KEY"
     },
     "response_formatter_agent": {
-      "provider": "openai",
-      "model_name": "gpt-4o-mini",
+      "provider": "gemini",
+      "model_name": "models/gemini-2.0-flash",
       "temperature": 0.3,
-      "max_tokens": 1024,
-      "api_key_env": "OPENAI_API_KEY"
+      "max_tokens": 4096,
+      "api_key_env": "GEMINI_API_KEY"
     },
     "fallback_manager_agent": {
-      "provider": "openai",
-      "model_name": "gpt-3.5-turbo",
-      "temperature": 0,
-      "max_tokens": 1024,
-      "api_key_env": "OPENAI_API_KEY"
-    },
-    "telegram_retriever_agent": {
       "provider": "openai",
       "model_name": "gpt-4o-mini",
       "temperature": 0,
       "max_tokens": 2048,
       "api_key_env": "OPENAI_API_KEY"
+    },
+    "telegram_retriever_agent": {
+      "provider": "gemini",
+      "model_name": "models/gemini-2.0-flash",
+      "temperature": 0,
+      "max_tokens": 4096,
+      "api_key_env": "GEMINI_API_KEY"
     }
   },
   "fallback_settings": {
