--- a/nginx/intellio.prod.conf
+++ b/nginx/intellio.prod.conf
@@ -29,6 +29,16 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
 
+    # n8n 설정.
+    location /n8n/ {
+        proxy_pass http://localhost:5678/;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        rewrite ^/n8n/(.*)$ /$1 break;
+    }
+
     # pgAdmin 설정
     location /pgadmin {
         proxy_pass http://localhost:5055;
