feat(백엔드): RAG 서비스 및 의존성 추가
- StockRAGService 싱글톤 패턴 구현
- StockRAGService 사용자 인증 추가
- 마크다운 스타일링 및 AIChatArea 컴포넌트 수정

--- a/.dockerignore
+++ b/.dockerignore
@@ -8,6 +8,7 @@ __pycache__/
 *.py[cod]
 *$py.class
 *.pyc
+.pytest_cache
 
 # Celery
 celerybeat*
@@ -18,6 +19,7 @@ celerybeat-schedule.dir
 
 # Virtual Environment
 venv/
+backend/venv/
 #env/
 #.env
 
