--- a/frontend/stockeasy/package.json
+++ b/frontend/stockeasy/package.json
@@ -22,11 +22,13 @@
     "react-dom": "latest",
     "react-dropzone": "^14.3.5",
     "react-emoji-render": "^2.0.1",
-    "react-markdown": "^9.0.1",
+    "react-markdown": "^9.1.0",
     "react-mermaid": "^0.1.3",
     "react-window": "^1.8.11",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
     "remark-breaks": "^4.0.0",
-    "remark-gfm": "^4.0.0",
+    "remark-gfm": "^4.0.1",
     "sonner": "^1.7.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
