ngnix 업로드 크기 1M -> 50M

--- a/nginx/intellio.dev.conf
+++ b/nginx/intellio.dev.conf
@@ -10,6 +10,9 @@ server {
     listen 80;
     server_name localhost;
 
+    # 파일 업로드 크기 제한 설정
+    client_max_body_size 50M;
+
     # FastAPI
     location /api/ {
         proxy_pass http://fastapi;
@@ -71,6 +74,9 @@ server {
     listen 80;
     server_name doceasy.localhost;
 
+    # 파일 업로드 크기 제한 설정
+    client_max_body_size 50M;
+
     location / {
         proxy_pass http://host.docker.internal:3010;
         proxy_http_version 1.1;
@@ -85,6 +91,9 @@ server {
 server {
     listen 80;
     server_name stockeasy.localhost;
+
+    # 파일 업로드 크기 제한 설정
+    client_max_body_size 50M;
 
     location / {
         proxy_pass http://host.docker.internal:3020;
