--- a/nginx/intellio.prod.conf
+++ b/nginx/intellio.prod.conf
@@ -29,6 +29,9 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
 
+    # 파일 업로드 크기 제한 설정
+    client_max_body_size 50M;
+
     # n8n 설정.
     location /n8n/ {
         proxy_pass http://localhost:5678/;
@@ -124,6 +127,9 @@ server {
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
 
+    # 파일 업로드 크기 제한 설정
+    client_max_body_size 50M;
+
     # Next.js 정적 파일
     location /_next/static/ {
         proxy_pass http://localhost:3010/_next/static/;
@@ -202,6 +208,9 @@ server {
     add_header X-Frame-Options "SAMEORIGIN" always;
     add_header X-XSS-Protection "1; mode=block" always;
     add_header X-Content-Type-Options "nosniff" always;
+
+    # 파일 업로드 크기 제한 설정
+    client_max_body_size 50M;
 
     # Stockeasy 연결 (port 3020)
     location / {
