ngnix 기본값(1M) -> 50M 확장

--- a/nginx/intellio.prod.conf
+++ b/nginx/intellio.prod.conf
@@ -116,8 +116,8 @@ server {
     server_name doceasy.intellio.kr;
 
     # SSL 인증서 설정
-    ssl_certificate /etc/letsencrypt/live/doceasy.intellio.kr/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/doceasy.intellio.kr/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/intellio.kr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/intellio.kr/privkey.pem;
     ssl_protocols TLSv1.2 TLSv1.3;
     ssl_ciphers HIGH:!aNULL:!MD5;
 
@@ -196,8 +196,8 @@ server {
     server_name stockeasy.intellio.kr;
 
     # SSL 인증서 설정
-    ssl_certificate /etc/letsencrypt/live/doceasy.intellio.kr/fullchain.pem;
-    ssl_certificate_key /etc/letsencrypt/live/doceasy.intellio.kr/privkey.pem;
+    ssl_certificate /etc/letsencrypt/live/intellio.kr/fullchain.pem;
+    ssl_certificate_key /etc/letsencrypt/live/intellio.kr/privkey.pem;
 
     # SSL 설정
     ssl_protocols TLSv1.2 TLSv1.3;
