--- a/nginx/intellio.prod.conf
+++ b/nginx/intellio.prod.conf
@@ -223,6 +223,22 @@ server {
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         proxy_set_header X-Forwarded-Proto $scheme;
+
+        # CORS 헤더 추가
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+        
+        # OPTIONS 요청 처리
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+            add_header 'Access-Control-Max-Age' 1728000 always;
+            add_header 'Content-Type' 'text/plain; charset=utf-8' always;
+            add_header 'Content-Length' 0 always;
+            return 204;
+        }
     }
 
     # Favicon
@@ -269,5 +285,41 @@ server {
         proxy_pass http://localhost:3020;
         expires 30d;
         add_header Cache-Control "public, no-transform";
+    }
+
+    
+    # requestfile 디렉토리를 위한 새로운 설정
+    location /requestfile/ {
+        alias /mnt/volume_sgp1_02/intellio_prod/frontend/stockeasy/public/requestfile/;
+        
+        # 심볼릭 링크 허용 옵션
+        disable_symlinks off;
+        
+        # 디버그 정보 추가
+        add_header X-Debug-Path $request_filename always;
+        add_header X-Debug-Uri $uri always;
+        
+        # CORS 헤더 추가
+        add_header 'Access-Control-Allow-Origin' '*' always;
+        add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+        add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+        
+        # 파일 유형 설정
+        default_type text/csv;
+        
+        # OPTIONS 요청 처리
+        if ($request_method = 'OPTIONS') {
+            add_header 'Access-Control-Allow-Origin' '*' always;
+            add_header 'Access-Control-Allow-Methods' 'GET, OPTIONS' always;
+            add_header 'Access-Control-Allow-Headers' 'DNT,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Range' always;
+            add_header 'Access-Control-Max-Age' 1728000 always;
+            add_header 'Content-Type' 'text/plain; charset=utf-8' always;
+            add_header 'Content-Length' 0 always;
+            return 204;
+        }
+        
+        # 로깅 설정
+        access_log /var/log/nginx/rs_etf_csv_access.log;
+        error_log /var/log/nginx/rs_etf_csv_error.log debug;
     }
 }
