닥이지 사이드바 조정. 스탁이지쪽 불피요 로그 일부삭제.

--- a/package.json
+++ b/package.json
@@ -73,6 +73,8 @@
     "react-sparklines": "^1.7.0",
     "react-toastify": "^11.0.3",
     "react-window": "^1.8.11",
+    "rehype-highlight": "^7.0.2",
+    "rehype-raw": "^7.0.0",
     "remark-breaks": "^4.0.0",
     "remark-gfm": "^4.0.0",
     "sonner": "^1.7.0",
