오류수정(사이드바 툴팁, 테이블너비고정, 너비일부 수정, etf테이블 컬럼일부 제거, 차트탭순서변경)

--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "echarts": "^5.6.0",
     "echarts-for-react": "^3.0.2",
     "html-react-parser": "^5.2.2",
+    "html-to-image": "^1.11.13",
     "html-void-elements": "^3.0.0",
     "html2canvas": "^1.4.1",
     "lightweight-charts": "^5.0.3",
@@ -63,6 +64,7 @@
     "node-html-parser": "^7.0.1",
     "papaparse": "^5.5.2",
     "react": "^18.3.1",
+    "react-component-export-image": "^1.0.6",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-emoji-render": "^2.0.1",
