--- a/backend/common/services/llm_config/agent_llm_config.json
+++ b/backend/common/services/llm_config/agent_llm_config.json
@@ -7,7 +7,22 @@
     "top_p": 0.7,
     "api_key_env": "OPENAI_API_KEY"
   },
+  
   "agents": {
+  "test_agent": {
+    "provider": "gemini",
+    "model_name": "models/gemini-2.0-flash",
+    "temperature": 0,
+    "max_tokens": 4096,
+    "api_key_env": "GEMINI_API_KEY"
+  },
+  "test_agent2": {
+    "provider": "gemini",
+    "model_name": "models/gemini-2.5-pro-exp-03-25",
+    "temperature": 0,
+    "max_tokens": 4096,
+    "api_key_env": "GEMINI_API_KEY"
+  },
 	"question_analyzer_agent": {
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
