--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@tanstack/react-table": "^8.20.6",
     "@types/echarts": "^4.9.22",
     "@types/papaparse": "^5.3.15",
+    "@types/plotly.js": "^2.35.4",
     "axios": "^1.8.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -62,6 +63,7 @@
     "next-themes": "^0.4.4",
     "node-html-parser": "^7.0.1",
     "papaparse": "^5.5.2",
+    "plotly.js": "^3.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
@@ -69,6 +71,7 @@
     "react-markdown": "^9.0.1",
     "react-mentions": "^4.4.10",
     "react-mermaid": "^0.1.3",
+    "react-plotly.js": "^2.6.0",
     "react-select": "^5.10.1",
     "react-sparklines": "^1.7.0",
     "react-toastify": "^11.0.3",
