--- a/backend/common/services/llm_config/agent_llm_config.json
+++ b/backend/common/services/llm_config/agent_llm_config.json
@@ -23,6 +23,13 @@
     "max_tokens": 4096,
     "api_key_env": "GEMINI_API_KEY"
   },
+  "telegram_collector": {
+    "provider": "gemini",
+    "model_name": "models/gemini-2.0-flash",
+    "temperature": 0,
+    "max_tokens": 4096,
+    "api_key_env": "GEMINI_API_KEY"
+  },
 	"question_analyzer_agent": {
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
@@ -59,6 +66,13 @@
       "api_key_env": "OPENAI_API_KEY"
     },
     "industry_analyzer_agent": {
+      "provider": "gemini",
+      "model_name": "models/gemini-2.0-flash",
+      "temperature": 0,
+      "max_tokens": 4096,
+      "api_key_env": "GEMINI_API_KEY"
+    },
+    "confidential_analyzer_agent": {
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
       "temperature": 0,
