--- a/backend/common/services/llm_config/agent_llm_config.json
+++ b/backend/common/services/llm_config/agent_llm_config.json
@@ -81,7 +81,7 @@
     },
     "summarizer_agent": {
       "provider": "gemini",
-      "model_name": "models/gemini-2.0-flash",
+      "model_name": "models/gemini-2.5-pro-exp-03-25",
       "temperature": 0.1,
       "max_tokens": 4096,
       "api_key_env": "GEMINI_API_KEY"
