--- a/nginx/intellio.prod.conf
+++ b/nginx/intellio.prod.conf
@@ -170,6 +170,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
+        proxy_read_timeout 600s;
+        proxy_connect_timeout 600s;
+        proxy_send_timeout 600s;
 
         # 디버깅을 위한 로깅 추가
         access_log /var/log/nginx/api_access.log;
@@ -261,6 +264,9 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_set_header X-Forwarded-Host $host;
         proxy_set_header X-Forwarded-Port $server_port;
+        proxy_read_timeout 600s;
+        proxy_connect_timeout 600s;
+        proxy_send_timeout 600s;
 
         # 디버깅을 위한 로깅 추가
         access_log /var/log/nginx/api_access.log;
