feat(백엔드/프론트): 재무 데이터 서비스 및 에이전트 개선
- FinancialAnalyzerAgent와 FinancialDataService를 통해 GCS에서 PDF 파일을 읽고 재무 데이터를 분석하는 기능 추가
- StockInfoService를 통해 종목 코드 및 이름 관리 기능 (미구현)
- 캐싱 전략을 통해 성능 최적화 및 오류 처리 로직 강화
- 파일명 체크 및 특수문자 처리 로직 개선
닥이지 UI 정리
 - ai, user 텍스트 박스, 채팅입력창의 radius 통일
 - 채팅,테이블 영역 최대화 버튼 정렬
 - 테이블 헤더 색상 변경
 - 스크롤바 default 변경 및 아래 가려지는 현상 수정

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -71,7 +71,8 @@ telegram_files/
 telegram_collector.session*
 # 채널 파일은 git에 절대 업로드하면 안됨.
 stockeasy/telegram_channels.json
-
+stockeasy/cache_financial_data/
+stockeasy/local_cache/
 # Celery
 celerybeat-schedule
 celerybeat-schedule.*
