--- a/backend/common/services/llm_config/agent_llm_config.json
+++ b/backend/common/services/llm_config/agent_llm_config.json
@@ -34,77 +34,78 @@
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
       "temperature": 0,
-      "max_tokens": 4096,
+      "max_tokens": 10000,
       "api_key_env": "GEMINI_API_KEY"
     },
 	"orchestrator_agent": {
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
       "temperature": 0,
-      "max_tokens": 4096,
+      "max_tokens": 10000,
       "api_key_env": "GEMINI_API_KEY"
     },
     "report_analyzer_agent": {
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
       "temperature": 0,
-      "max_tokens": 4096,
+      "max_tokens": 10000,
       "api_key_env": "GEMINI_API_KEY"
     },
     "knowledge_integrator_agent": {
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
       "temperature": 0.1,
-      "max_tokens": 4096,
+      "max_tokens": 10000,
       "api_key_env": "GEMINI_API_KEY"
     },
 
     "financial_analyzer_agent": {
-      "provider": "openai",
-      "model_name": "gpt-4o-mini",
-      "temperature": 0.1,
-      "api_key_env": "OPENAI_API_KEY"
+      "provider": "gemini",
+      "model_name": "models/gemini-2.0-flash",
+      "temperature": 0,
+      "max_tokens": 8000,
+      "api_key_env": "GEMINI_API_KEY"
     },
     "industry_analyzer_agent": {
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
       "temperature": 0,
-      "max_tokens": 4096,
+      "max_tokens": 10000,
       "api_key_env": "GEMINI_API_KEY"
     },
     "confidential_analyzer_agent": {
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
       "temperature": 0,
-      "max_tokens": 4096,
+      "max_tokens": 10000,
       "api_key_env": "GEMINI_API_KEY"
     },
     "summarizer_agent": {
       "provider": "gemini",
       "model_name": "models/gemini-2.5-pro-exp-03-25",
       "temperature": 0.1,
-      "max_tokens": 4096,
+      "max_tokens": 10000,
       "api_key_env": "GEMINI_API_KEY"
     },
     "response_formatter_agent": {
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
       "temperature": 0.1,
-      "max_tokens": 4096,
+      "max_tokens": 10000,
       "api_key_env": "GEMINI_API_KEY"
     },
     "fallback_manager_agent": {
       "provider": "openai",
       "model_name": "gpt-4o-mini",
       "temperature": 0,
-      "max_tokens": 2048,
+      "max_tokens": 8000,
       "api_key_env": "OPENAI_API_KEY"
     },
     "telegram_retriever_agent": {
       "provider": "gemini",
       "model_name": "models/gemini-2.0-flash",
       "temperature": 0,
-      "max_tokens": 4096,
+      "max_tokens": 10000,
       "api_key_env": "GEMINI_API_KEY"
     },
     "industry_analyzer_agent_not-used": {
@@ -113,6 +114,12 @@
       "temperature": 0,
       "max_tokens": 3096,
       "api_key_env": "CLAUDE_API_KEY"
+    },
+    "financial_analyzer_agent_not-used": {
+      "provider": "openai",
+      "model_name": "gpt-4o-mini",
+      "temperature": 0.1,
+      "api_key_env": "OPENAI_API_KEY"
     }
   },
   "fallback_settings": {
