--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -75,6 +75,7 @@ grpc-google-iam-v1==0.14.0
 grpcio==1.70.0
 grpcio-status==1.70.0
 h11==0.14.0
+html5lib==1.1
 httpcore==1.0.7
 httplib2==0.22.0
 httpx==0.28.1
@@ -131,6 +132,7 @@ llama-index-readers-llama-parse==0.4.0
 llama-index-retrievers-bm25==0.5.2
 llama-parse==0.5.20
 loguru==0.7.3
+lxml==5.3.2
 Mako==1.3.9
 markdown-it-py==3.0.0
 MarkupSafe==3.0.2
