--- a/backend/common/services/llm_config/agent_llm_config.json
+++ b/backend/common/services/llm_config/agent_llm_config.json
@@ -16,9 +16,16 @@
     "max_tokens": 4096,
     "api_key_env": "GEMINI_API_KEY"
   },
-  "test_agent2": {
+  "gemini-2.5-pro-exp-03-25": {
     "provider": "gemini",
     "model_name": "models/gemini-2.5-pro-exp-03-25",
+    "temperature": 0,
+    "max_tokens": 4096,
+    "api_key_env": "GEMINI_API_KEY"
+  },
+  "gemini-2.0-flash": {
+    "provider": "gemini",
+    "model_name": "models/gemini-2.0-flash",
     "temperature": 0,
     "max_tokens": 4096,
     "api_key_env": "GEMINI_API_KEY"
