--- a/frontend/stockeasy/package.json
+++ b/frontend/stockeasy/package.json
@@ -22,6 +22,7 @@
     "react-dom": "latest",
     "react-dropzone": "^14.3.5",
     "react-emoji-render": "^2.0.1",
+    "react-hot-toast": "^2.5.2",
     "react-markdown": "^9.1.0",
     "react-mermaid": "^0.1.3",
     "react-window": "^1.8.11",
