--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.3.5",
     "react-emoji-render": "^2.0.1",
+    "react-hot-toast": "^2.5.2",
     "react-markdown": "^9.0.1",
     "react-mentions": "^4.4.10",
     "react-mermaid": "^0.1.3",
