--- a/frontend/stockeasy/package.json
+++ b/frontend/stockeasy/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^4.1.0",
+    "dom-to-image-more": "^3.5.0",
     "lucide-react": "^0.460.0",
     "next": "latest",
     "next-themes": "^0.4.4",
