feat(backend): PDF 다운로드 기능 추가 및 설정 개선
- 채팅 세션을 PDF로 저장하고 다운로드 URL을 생성하는 API 엔드포인트 추가.
- FastAPI에서 정적 파일 서빙 설정 및 임시 파일 경로 설정.

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -73,6 +73,9 @@ telegram_collector.session*
 stockeasy/telegram_channels.json
 stockeasy/cache_financial_data/
 stockeasy/local_cache/**/*
+#채팅 다운로드 파일 임시
+tmp_download/
+
 
 # Celery
 celerybeat-schedule
@@ -86,3 +89,4 @@ evaluation/results
 # langgraph
 langgraph_project/
 .langgraph_api
+
