feat(database): PgBouncer 설정 추가 및 리소스 정리 기능 구현
- DB 세션 관리를 PgBouncer가 하도록 위임
- 후속 질문 일단 차단.

--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -19,6 +19,32 @@ services:
     networks:
       - app-network
 
+  pgbouncer:
+    image: edoburu/pgbouncer:latest
+    environment:
+      - DB_USER=${POSTGRES_USER}
+      - DB_PASSWORD=${POSTGRES_PASSWORD}
+      - DB_HOST=postgres
+      - DB_NAME=${POSTGRES_DB}
+      - POOL_MODE=transaction
+      - MAX_CLIENT_CONN=500
+      - DEFAULT_POOL_SIZE=20
+      - ADMIN_USERS=${POSTGRES_USER}
+      - LISTEN_PORT=6432
+      - AUTH_TYPE=scram-sha-256   # 또는 md5
+    ports:
+      - "6432:6432"
+    depends_on:
+      - postgres
+    restart: unless-stopped
+    networks:
+      - app-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -h localhost -p 6432 -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   pgadmin:
     image: dpage/pgadmin4
     env_file:
@@ -53,26 +79,25 @@ services:
     ports:
       - "8000:8000"
     depends_on:
-      - postgres
+      - pgbouncer
       - redis
       - tika
     restart: unless-stopped
     networks:
       - app-network
 
-
   celery-doceasy:
     depends_on:
+      - pgbouncer
       - redis
-      - postgres
     restart: unless-stopped
     networks:
       - app-network
 
   celery-stockeasy:
     depends_on:
+      - pgbouncer
       - redis
-      - postgres
     networks:
       - app-network
 
