--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,5 +1,5 @@
 aiohappyeyeballs==2.6.1
-aiohttp==3.11.18
+aiohttp>=3.10.0,<3.11.0
 aiosignal==1.3.2
 alembic==1.14.1
 amqp==5.3.1
@@ -110,8 +110,8 @@ langchain-fireworks==0.2.7
 langchain-google-genai==2.0.9
 langchain-google-vertexai==2.0.12
 langchain-openai==0.3.7
-langchain-pinecone==0.2.5
-langchain-tavily==0.1.6
+langchain-pinecone==0.2.6
+# langchain-tavily==0.1.6
 langchain-tests==0.3.19
 langchain-text-splitters==0.3.8
 langgraph==0.3.11
