--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -172,7 +172,6 @@ pgvector==0.4.1
 pickleshare==0.7.5
 pillow==11.1.0
 pinecone==6.0.2
-pinecone-client==2.2.4
 pinecone-plugin-interface==0.0.7
 pipdeptree==2.25.0
 pipreqs==0.5.0
@@ -184,6 +183,7 @@ propcache==0.3.1
 proto-plus==1.26.0
 protobuf==5.29.4
 protoc-gen-openapiv2==0.0.1
+psutil==7.0.0
 psycopg2-binary==2.9.10
 ptyprocess==0.7.0
 pure_eval==0.2.3
