--- a/docker-compose.base.yml
+++ b/docker-compose.base.yml
@@ -84,6 +84,16 @@ services:
       - pgbouncer
       - redis
       - tika
+    #restart: unless-stopped
+    networks:
+      - app-network
+
+  stock-data-collector:
+    ports:
+      - "8001:8001"
+    depends_on:
+      - pgbouncer
+      - redis
     restart: unless-stopped
     networks:
       - app-network
@@ -92,7 +102,7 @@ services:
     depends_on:
       - pgbouncer
       - redis
-    restart: unless-stopped
+    #restart: unless-stopped
     networks:
       - app-network
 
