--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,4 +1,3 @@
-
 services:
   postgres:
     env_file:
@@ -23,6 +22,22 @@ services:
       - ENV=production
     volumes:
       - ./backend:/backend
+
+  stock-data-collector:
+    build:
+      context: .
+      dockerfile: Dockerfile.stockeasy.collector.prod
+    env_file:
+      - ./backend/.env.production
+    environment:
+      - ENV=production
+    volumes:
+      - ./backend:/backend
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "5"
 
   celery-doceasy:
     build:
